--- a/solarops-frontend/package.json
+++ b/solarops-frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.7",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
