--- a/solarops-backend/package.json
+++ b/solarops-backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/server.ts\"",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "seed": "node --loader ts-node/esm prisma/seed.ts",
+    "seedTelemetry": "node --loader ts-node/esm prisma/seedTelemetry.ts"
   },
   "keywords": [],
   "author": "",
