--- a/solarops-backend/tsconfig.json
+++ b/solarops-backend/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    // "module": "commonjs",
     "module": "NodeNext",
+    // "moduleResolution": "node",
     "moduleResolution": "NodeNext",
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src"]
 }
