--- a/solarops-frontend/package.json
+++ b/solarops-frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@mui/x-data-grid": "^8.26.0",
+    "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
@@ -24,6 +25,7 @@
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.12.0",
+    "react-window": "^2.2.5",
     "recharts": "^3.6.0",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7"
@@ -34,6 +36,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-window": "^2.0.0",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
