--- a/solarops-backend/package.json
+++ b/solarops-backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/server.ts\"",
+    "dev": "nodemon --watch src --ext ts --exec \"tsx src/server.ts\"",
     "build": "tsc",
     "start": "node dist/server.js",
     "seed": "node --loader ts-node/esm prisma/seed.ts",
@@ -29,6 +29,7 @@
     "@types/node": "^25.0.10",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
