--- a/solarops-backend/package.json
+++ b/solarops-backend/package.json
@@ -7,8 +7,8 @@
     "dev": "nodemon --watch src --ext ts --exec \"tsx src/server.ts\"",
     "build": "tsc",
     "start": "node dist/server.js",
-    "seed": "node --loader ts-node/esm prisma/seed.ts",
-    "seedTelemetry": "node --loader ts-node/esm prisma/seedTelemetry.ts"
+    "seedSites&Inverters": "node --loader ts-node/esm prisma/seedSites&Inverters.ts",
+    "telemetry:backfill": "ts-node src/jobs/telemetryBackfill.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,12 +21,14 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "ioredis": "^5.9.2",
+    "node-cron": "^4.2.1",
     "prisma": "^6.19.2",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.10",
+    "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
